Code documentation + fixing minor issues

--- a/Progetto_Birindelli.ipynb
+++ b/Progetto_Birindelli.ipynb
@@ -625,7 +625,8 @@
    "id": "ce33dfd2",
    "metadata": {},
    "source": [
-    "## Deepbit.net graphs parts\n"
+    "# Deepbit.net chain of transactions\n",
+    "Let's create a graph of the transactions of Deepbit.net starting from the transaction _1883820_ in the dataset and start following the chain of transactions where a Deepbit.net address is present as output address. The graph will be created using NetworkX library."
    ]
   },
   {
@@ -633,7 +634,7 @@
    "id": "3fde3f8c",
    "metadata": {},
    "source": [
-    "Preparing the data for the graphs of DeepBit.net\n"
+    "Preparing the data for the graphs of DeepBit.net"
    ]
   },
   {
@@ -654,7 +655,8 @@
    "id": "bbc0a27a",
    "metadata": {},
    "source": [
-    "### 1)\n"
+    "### 1) Create a graph of the transactions of DeepBit.net following the chain of transactions\n",
+    "Starting from the transaction _1883820_ in the dataset, I will follow the chain of transactions where a Deepbit.net address is present as output address. When I find a transaction with a Deepbit.net address as output address, I will add the transaction to the graph and continue to follow the chain of transactions saving the change address as label of the edge and saving, if presents, the other output addresses. When it finds a transaction with no Deepbit.net address or with more than one Deepbit.net address, it stops the process and prints the number of transactions in the graph and the number of addresses that do not belong to Deepbit.net. In the meanwhile it prints the sequence of transactions in the graph and the change addresses as labels of the edges."
    ]
   },
   {
@@ -664,14 +666,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Inizialize a directed graph to represent the transaction chain\n",
     "deepbit_graph = nx.MultiDiGraph()\n",
     "\n",
-    "# Initially add the unique output addresses to the graph\n",
-    "\n",
-    "# Aggiungi nodo con tutti gli attributi della riga\n",
+    "# Add the first transaction to the graph\n",
     "deepbit_graph.add_node(transaction.iloc[0]['txId'])\n",
     "\n",
-    "\n",
+    "# Optimize the output and input information to only include transactions with txId greater than or equal to the current transaction\n",
     "output_info = outputs[outputs['txId'] >= transaction.iloc[0]['txId']].copy()\n",
     "inputs_info = inputs[inputs['txId'] >= transaction.iloc[0]['txId']].copy()\n",
     "\n",
@@ -679,40 +680,37 @@
     "current_transaction = transaction\n",
     "\n",
     "OthersDeepbit =set() # outputs not belonging to Deepbit.net\n",
+    "other_outputs_per_tx = dict()\n",
     "\n",
     "while True:\n",
     "    # Find the inputs for the current transaction\n",
-    "    print(f\"Processing transaction {current_transaction.iloc[0]['txId']}...\")\n",
     "    outs = output_info.merge(current_transaction['txId'], on='txId')\n",
     "    \n",
-    "    # check if there is a Deepbit.net address\n",
+    "    # Check if there is a Deepbit.net address in the outputs of the current transaction\n",
     "    check_deepbit_addr= outs.merge(deepbit_mapped_addresses, on='addressId', how='left', indicator='is_deepbit').rename(columns={'txId': 'prevTxId', 'position': 'prevTxpos'})\n",
     "    deepbit_addrs = check_deepbit_addr[check_deepbit_addr['is_deepbit'] == 'both']\n",
     "    other_addrs = check_deepbit_addr[check_deepbit_addr['is_deepbit'] == 'left_only']\n",
     "\n",
+    "    # If there are no Deepbit.net addresses in the outputs, stop the process\n",
     "    if len(deepbit_addrs) !=1 :\n",
-    "        print(f\"Stop: trovati {len(check_deepbit_addr)} change-outputs in tx {current_transaction.iloc[0]['txId']}\")\n",
+    "        print(f\"Stop the process: no Deepbit.net change-address are present in tx {current_transaction.iloc[0]['txId']} as ouptput address.\\n\")\n",
     "        break\n",
     "    if not other_addrs.empty:\n",
     "        # Add the outputs that do not belong to Deepbit.net to the set\n",
     "        OthersDeepbit.update(other_addrs['addressId'].unique())\n",
-    "        # print(f\"Found {len(OthersDeepbit)} outputs that do not belong to Deepbit.net in tx {current_transaction.iloc[0]['txId']}\")\n",
-    "\n",
+    "        other_outputs_per_tx[current_transaction.iloc[0]['txId']] = mapping[mapping['addressId'].isin(other_addrs['addressId'])]['hash'].to_list()\n",
     "    \n",
     "    # Find the next transaction\n",
-    "    next_transactions = inputs_info.merge(deepbit_addrs, on=['prevTxId', 'prevTxpos'])#.rename(columns={'prevTxId':'txId', 'prevTxpos':'position' })\n",
+    "    next_transactions = inputs_info.merge(deepbit_addrs, on=['prevTxId', 'prevTxpos'])\n",
     "    if next_transactions.empty:\n",
-    "        print(f\"Stop: la catena della transazione {current_transaction['txId']} si ferma qui.\")\n",
+    "        print(f\"Stop the process: the chain of transactions stops at the transaction {current_transaction['txId']}\\n\")\n",
     "        break\n",
     "    # Add the next transaction to the graph\n",
-    "\n",
     "    next_tx_id = next_transactions.iloc[0]['txId']\n",
-    "\n",
-    "    print(f\"Adding transaction {next_tx_id} to the graph\")\n",
     "    deepbit_graph.add_node(next_tx_id)\n",
     "    \n",
     "    current_tx_id = current_transaction.iloc[0]['txId']\n",
-    "    change_address = deepbit_addrs.iloc[0]['addressId']  # change address\n",
+    "    change_address = mapping[mapping['addressId']==deepbit_addrs.iloc[0]['addressId']].iloc[0]['hash']  # change address\n",
     "    \n",
     "    # Add an edge from the current transaction to the next transaction\n",
     "    deepbit_graph.add_edge(current_tx_id,next_tx_id, change_address=change_address)\n",
@@ -746,9 +744,8 @@
    "id": "9621c7f7",
    "metadata": {},
    "source": [
-    "# 2)\n",
-    "\n",
-    "per ogni coppia di transazioni ti, ti+1 della catena calcolare rispettivamente, la differenza tra i timestamp delle due transazioni e tra i valori inviati sui change address e visualizzare le differenze ottenute su un grafico;\n"
+    "## 2) Computing the differences between the timestamps and the values sent on change addresses\n",
+    "For each pair of transactions ti, ti+1 in the chain, calculate the difference between the timestamps of the two transactions and between the values sent on change addresses, and visualize the differences obtained on a graph."
    ]
   },
   {
@@ -758,34 +755,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a Series with the transaction IDs in the DeepBit.net chain\n",
     "txId_chain = pd.Series(list(deepbit_graph.nodes()), name='txId')\n",
     "\n",
+    "# Merge the transaction timestamps with the chain of txIds\n",
     "payment_info = transactions[['timestamp', 'txId']].merge(txId_chain, on='txId').reset_index()\n",
     "\n",
-    "# Calcola le differenze tra timestamp consecutivi\n",
+    "# Compute the differences between consecutive timestamps\n",
     "diff_timestamp = pd.Series(payment_info['timestamp'].diff().shift(-1), name='timestamp_diff')\n",
     "\n",
-    "# Calcola le differenze tra gli amount consecutivi sui change address\n",
+    "# Compute the differences between consecutive amounts on change addresses\n",
     "amount_info = outputs.merge(payment_info, on='txId')\n",
-    "amount_diff = pd.Series(amount_info['amount'].diff().shift(-1).abs()/ 1e8, name='amount_diff')\n",
+    "amount_diff = pd.Series(amount_info['amount'].diff().shift(-1).abs() / 1e8, name='amount_diff')\n",
     "\n",
+    "# Plot the differences\n",
     "fig, axs = plt.subplots(1, 2, figsize=(16, 6))\n",
-    "fig.suptitle('Differenze tra timestamp e amount sui change address nella catena DeepBit.net', fontsize=16)\n",
+    "fig.suptitle('Differences between timestamp and amount on change addresses in the DeepBit.net chain', fontsize=16)\n",
     "\n",
-    "# Primo subplot: differenza timestamp\n",
+    "# First subplot: timestamp difference\n",
     "axs[0].plot(diff_timestamp.index, diff_timestamp, color='tab:blue', marker='o')\n",
-    "axs[0].set_title('Differenza timestamp tra transazioni consecutive')\n",
-    "axs[0].set_xlabel('Indice nella catena')\n",
-    "axs[0].set_ylabel('Differenza timestamp (ms)')\n",
+    "axs[0].set_title('Timestamp difference between consecutive transactions')\n",
+    "axs[0].set_xlabel('Index in chain')\n",
+    "axs[0].set_ylabel('Timestamp difference (seconds)')\n",
     "axs[0].grid(True, alpha=0.3)\n",
     "\n",
-    "# Secondo subplot: differenza amount\n",
+    "# Second subplot: amount difference\n",
     "axs[1].plot(amount_diff.index, amount_diff, color='tab:orange', marker='x')\n",
-    "axs[1].set_title('Differenza amount tra transazioni consecutive')\n",
-    "axs[1].set_xlabel('Indice nella catena')\n",
-    "axs[1].set_ylabel('Differenza amount (satoshi)')\n",
+    "axs[1].set_title('Amount difference between consecutive transactions')\n",
+    "axs[1].set_xlabel('Index in chain')\n",
+    "axs[1].set_ylabel('Amount difference (BTC)')\n",
     "axs[1].grid(True, alpha=0.3)\n",
-    "# axs[1].ticklabel_format(style='plain', axis='y')  # Disabilita la notazione scientifica sull'asse y\n",
+    "# axs[1].ticklabel_format(style='plain', axis='y')  # Disable scientific notation on y-axis if needed\n",
     "\n",
     "plt.tight_layout(rect=[0, 0, 1, 0.95])\n",
     "plt.show()\n"
@@ -796,9 +796,8 @@
    "id": "10ecab57",
    "metadata": {},
    "source": [
-    "# 3)\n",
-    "\n",
-    "considerare gli indirizzi in OthersDeepbit, e verificare, effettuando scraping su WalletExplorer, se corrispondono a entità deanonimizzate;\n"
+    "## 3) OtherDeepbit addresses De-anonymization\n",
+    "In this part, I will analyze the addresses that do not belong to Deepbit.net, which I will call OthersDeepbit. The goal is to de-anonymize these addresses by checking if they correspond to entities that have been de-anonymized on WalletExplorer through the help of the scraping process."
    ]
   },
   {
@@ -808,52 +807,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "REQUEST_INTERVAL = 6  # secondi tra le richieste\n",
+    "REQUEST_INTERVAL = 5  # secondi tra le richieste\n",
+    "WALLET_SCRAPING_CACHE = {}\n",
     "\n",
     "def is_deanonymized(address):\n",
-    "    \"\"\"Effettua scraping su Wallet Explorer per ottenere l'hash del wallet dato un address\"\"\"\n",
+    "    \"\"\"\n",
+    "    Checks if a Bitcoin address has been de-anonymized on WalletExplorer.\n",
     "\n",
+    "    This function performs a web scraping request to WalletExplorer for the given address. In order to avoid overwhelming the server,\n",
+    "    a cache is used to store previously checked addresses. Indeed, if the address is found in the local cache, it returns the cached result.\n",
+    "    Otherwise, it queries the WalletExplorer website, parses the result, and determines if the address is labeled (de-anonymized) or not.\n",
+    "    The result is cached for future calls.\n",
+    "\n",
+    "    Parameters:\n",
+    "        address (str): The address to check.\n",
+    "\n",
+    "    Returns:\n",
+    "        bool or None: Returns True if the address is de-anonymized (labeled), False if not,\n",
+    "                      or None if the status cannot be determined (e.g., scraping error).\n",
+    "    \"\"\"\n",
+    "    # Check if the address is already in the cache\n",
+    "    if address in WALLET_SCRAPING_CACHE:\n",
+    "        return WALLET_SCRAPING_CACHE[address]\n",
     "    \n",
-    "    url = f\"https://www.walletexplorer.com/?q={address}\"\n",
-    "    headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3'}\n",
+    "    # Construct the URL for the address search\n",
+    "    url = f\"{BASE_URL}/?q={address}\"\n",
     "    \n",
     "    try:\n",
-    "        time.sleep(REQUEST_INTERVAL)  # Attendi tra le richieste per evitare blocchi\n",
+    "        # Wait between requests to avoid being blocked\n",
+    "        time.sleep(REQUEST_INTERVAL)  \n",
     "        \n",
-    "        response = requests.get(url, headers=headers, timeout=50)\n",
+    "        response = requests.get(url, headers=HEADERS, timeout=50)\n",
     "        response.raise_for_status()\n",
     "        soup = BeautifulSoup(response.text, 'html.parser')\n",
     "        \n",
-    "        # Tentativo 1: Cerca nel div header\n",
-    "        main_div = soup.find('div',id='main')\n",
+    "        # Try to find the wallet label in the main div\n",
+    "        main_div = soup.find('div', id='main')\n",
     "        h2_tag = main_div.find('h2') if main_div else None\n",
     "        \n",
     "        if h2_tag:\n",
-    "            # Prendi il testo completo\n",
+    "            # Get the full text and split by spaces\n",
     "            full = h2_tag.get_text(separator=' ').strip()\n",
-    "            # Estrai tutte le sottostringhe fra virgolette doppie\n",
     "            quoted = full.split(' ')\n",
-    "            # Pulisci gli elementi e verifica che ci sia almeno un secondo elemento\n",
     "            cleaned = [s.strip() for s in quoted]\n",
     "            if len(cleaned) >= 2:\n",
     "                wallet_hash = cleaned[2]\n",
+    "                # If the wallet hash is not enclosed in brackets, it's not labeled\n",
     "                if wallet_hash[0] != '[' and wallet_hash[-1] != ']':\n",
-    "                    # Rimuovi le parentesi quadre\n",
     "                    return False\n",
-    "\n",
+    "                WALLET_SCRAPING_CACHE[address] = True\n",
     "                return True\n",
     "        \n",
-    "        # Se non trovato\n",
+    "        # If not found, return None\n",
     "        return None\n",
     "        \n",
     "    except Exception as e:\n",
-    "        print(f\"Errore durante lo scraping per {address}: {str(e)}\")\n",
+    "        print(f\"Error during scraping for {address}: {str(e)}\")\n",
     "        return None\n",
     "    \n",
-    "\n",
+    "# Map the addressId of the other addresses to their corresponding hashes\n",
     "otheraddresses_mapped = mapping.merge(pd.Series(list(OthersDeepbit), name='addressId'), on='addressId')['hash']\n",
     "\n",
-    "\n",
+    "# Check which are the deanonymized addresses\n",
     "deanonymized_addresses = set()\n",
     "for address in otheraddresses_mapped:\n",
     "    res = is_deanonymized(address)\n",
