Draft for graph plotting and chain of transaction analysis

--- a/Progetto_Birindelli.ipynb
+++ b/Progetto_Birindelli.ipynb
@@ -718,8 +718,25 @@
     "    # Update the current transaction to the next one\n",
     "    current_transaction = next_transactions\n",
     "\n",
-    "print(f\"Total number of transactions in the graph: {deepbit_graph.number_of_nodes()}\")\n",
+    "print(f\"Total number of transactions in the graph: {deepbit_graph.number_of_nodes()}\\n\")\n",
     "print(f\"Number of OthersDeepbit addresses: {len(OthersDeepbit)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18e8f4b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = transactions[transactions['txId'].isin([\n",
+    "\t1883820, 1883871, 1883904, 1883930, 1883953, 1883978, 1884070, 1884104, 1884121, 1884128,\n",
+    "\t1884131, 1884134, 1884138, 1884141, 1884143, 1884145, 1884147, 1884149, 1884151, 1884153,\n",
+    "\t1884155, 1884157, 1884159, 1884161, 1884163, 1884165, 1884167, 1884169, 1884171, 1884173,\n",
+    "\t1884175, 1884177, 1884179, 1884181, 1884183, 1884274, 1884305, 1884307, 1884309, 1884311,\n",
+    "\t1884387, 1884447, 1884667, 1884691, 1884695, 1884699, 1884703, 1884707, 1884710, 1884713,\n",
+    "\t1884716, 1884719, 1884722, 1884725, 1884728, 1884731, 1884734, 1884737, 1884740, 1884743,\n",
+    "\t1884745, 1884747, 1884749, 1884751, 1884753, 1884755, 1884757, 1884758, 1884759, 1884760,])].merge(outputs, on='txId')"
    ]
   },
   {
@@ -729,14 +746,178 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the graph \n",
-    "posizione_circular = nx.spiral_layout(deepbit_graph, equidistant=True, resolution=1)\n",
-    "plt.figure(figsize=(12, 12))\n",
-    "nx.draw_networkx(deepbit_graph, pos= posizione_circular, node_color='lightblue', font_size=7, font_color='black', arrows=True, node_size=100)\n",
-    "# Highlight the start node in red\n",
-    "nx.draw_networkx_nodes(deepbit_graph, nodelist=[list(deepbit_graph.nodes())[0]], node_color='red', node_size=200, label='Start Node', pos=posizione_circular)\n",
+    "# def abbreviate_label(label):\n",
+    "#     label_str = str(label)\n",
+    "#     return f\"{label_str[:5]}...{label_str[-5:]}\"\n",
+    "# edge_labels = {\n",
+    "#     (u, v): abbreviate_label(d['change_address'].values[0] if hasattr(d['change_address'], 'values') else d['change_address'])\n",
+    "#     for u, v, d in deepbit_graph.edges(data=True)\n",
+    "# }\n",
     "\n",
-    "nx.draw_networkx_edge_labels(deepbit_graph, pos=posizione_circular, edge_labels={(u, v): d['change_address'] for u, v, d in deepbit_graph.edges(data=True)}, font_size=4)"
+    "# posizione_circular = nx.spiral_layout(deepbit_graph, equidistant=True, resolution=1)\n",
+    "# plt.figure(figsize=(12, 12))\n",
+    "# nx.draw_networkx(deepbit_graph, pos=posizione_circular, node_color='lightblue', font_size=7, font_color='black', arrows=True, node_size=100)\n",
+    "# nx.draw_networkx_nodes(deepbit_graph, nodelist=[list(deepbit_graph.nodes())[0]], node_color='red', node_size=200, label='Start Node', pos=posizione_circular)\n",
+    "# nx.draw_networkx_edge_labels(deepbit_graph, pos=posizione_circular, edge_labels=edge_labels, font_size=4)\n",
+    "# [Il tuo codice esistente...]\n",
+    "\n",
+    "# Dopo aver costruito il grafo, procedi con la visualizzazione\n",
+    "from math import e\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from matplotlib.patches import ConnectionStyle, PathPatch\n",
+    "from matplotlib.path import Path\n",
+    "\n",
+    "plt.figure(figsize=(15, 15))\n",
+    "\n",
+    "# Calcola un layout con più spazio tra i nodi\n",
+    "pos = nx.spiral_layout(deepbit_graph, equidistant=True, resolution=1)\n",
+    "\n",
+    "# Disegna i nodi principali (transazioni)\n",
+    "nx.draw_networkx_nodes(\n",
+    "    deepbit_graph, \n",
+    "    pos, \n",
+    "    node_color='lightblue', \n",
+    "    node_size=1000,\n",
+    "    alpha=0.8\n",
+    ")\n",
+    "\n",
+    "# Disegna il nodo iniziale in rosso\n",
+    "start_node = list(deepbit_graph.nodes)[0]\n",
+    "nx.draw_networkx_nodes(\n",
+    "    deepbit_graph, \n",
+    "    pos, \n",
+    "    nodelist=[start_node], \n",
+    "    node_color='red', \n",
+    "    node_size=1200\n",
+    ")\n",
+    "\n",
+    "# Etichette per i nodi\n",
+    "nx.draw_networkx_labels(\n",
+    "    deepbit_graph, \n",
+    "    pos, \n",
+    "    font_size=9, \n",
+    "    font_weight='bold',\n",
+    "    font_family='monospace'\n",
+    ")\n",
+    "\n",
+    "# Disegna gli archi con frecce curve\n",
+    "for u, v, d in deepbit_graph.edges(data=True):\n",
+    "    # Usa uno stile di connessione curvo come stringa\n",
+    "    connection_style = \"arc3,rad=0.2\"  # Aumenta rad per curve più pronunciate\n",
+    "\n",
+    "    nx.draw_networkx_edges(\n",
+    "        deepbit_graph,\n",
+    "        pos,\n",
+    "        edgelist=[(u, v)],\n",
+    "        edge_color='blue',\n",
+    "        arrows=True,\n",
+    "        arrowstyle='-|>',\n",
+    "        arrowsize=15,\n",
+    "        node_size=1000,\n",
+    "        connectionstyle=connection_style\n",
+    "    )\n",
+    "\n",
+    "# Aggiungi etichette per i change address con posizione ottimizzata\n",
+    "edge_labels = {}\n",
+    "for (u, v, d) in deepbit_graph.edges(data=True):\n",
+    "    change_addr = d['change_address']\n",
+    "    edge_labels[(u, v)] = abbreviate_label(change_addr, 4, 4)\n",
+    "\n",
+    "# Calcola la posizione ottimale per le etichette\n",
+    "for (u, v), label in edge_labels.items():\n",
+    "    # Punto medio della curva\n",
+    "    mid_point = (\n",
+    "        0.5 * (pos[u][0] + pos[v][0]) + 0.1 * (pos[v][1] - pos[u][1]),\n",
+    "        0.5 * (pos[u][1] + pos[v][1]) + 0.1 * (pos[u][0] - pos[v][0])\n",
+    "    )\n",
+    "    \n",
+    "    plt.text(\n",
+    "        mid_point[0],\n",
+    "        mid_point[1],\n",
+    "        label,\n",
+    "        fontsize=8,\n",
+    "        ha='center',\n",
+    "        va='center',\n",
+    "        rotation=20,  # Leggera rotazione per migliore adattamento\n",
+    "        color='darkblue',\n",
+    "        backgroundcolor=(1, 1, 1, 0.7)  # Sfondo bianco semi-trasparente\n",
+    "    )\n",
+    "\n",
+    "# Aggiungi annotazioni per gli altri output con linee curve\n",
+    "for tx_id, addresses in other_outputs_per_tx.items():\n",
+    "    if tx_id not in pos:\n",
+    "        continue\n",
+    "        \n",
+    "    # Posizione del nodo transazione\n",
+    "    tx_x, tx_y = pos[tx_id]\n",
+    "    n_outputs = len(addresses)\n",
+    "    \n",
+    "    # Calcola angoli equidistanti\n",
+    "    angles = np.linspace(0, 2*np.pi, n_outputs, endpoint=False)\n",
+    "    \n",
+    "    # Regola la distanza in base al numero di output\n",
+    "    base_distance = 0.2\n",
+    "    distance = base_distance * (1 + 0.1 * n_outputs)\n",
+    "    \n",
+    "    for i, address in enumerate(addresses):\n",
+    "        angle = angles[i]\n",
+    "        \n",
+    "        # Calcola posizione finale (con offset per evitare sovrapposizioni)\n",
+    "        label_x = tx_x + distance * np.cos(angle)\n",
+    "        label_y = tx_y + distance * np.sin(angle)\n",
+    "        \n",
+    "        # Calcola un punto di controllo per la curva\n",
+    "        control_x = tx_x + 0.7 * distance * np.cos(angle)\n",
+    "        control_y = tx_y + 0.7 * distance * np.sin(angle)\n",
+    "        # Disegna una curva di Bézier\n",
+    "        path = Path(\n",
+    "            [(tx_x, tx_y), (control_x, control_y), (label_x, label_y)],\n",
+    "            [Path.MOVETO, Path.CURVE3, Path.CURVE3]\n",
+    "        )\n",
+    "        \n",
+    "        patch = PathPatch(\n",
+    "            path, \n",
+    "            edgecolor='gray', \n",
+    "            facecolor='none', \n",
+    "            linestyle='dashed', \n",
+    "            linewidth=0.7,\n",
+    "            alpha=0.6\n",
+    "        )\n",
+    "        plt.gca().add_patch(patch)\n",
+    "        plt.gca().add_patch(patch)\n",
+    "        \n",
+    "        # Aggiungi etichetta\n",
+    "        plt.text(\n",
+    "            label_x, \n",
+    "            label_y, \n",
+    "            abbreviate_label(address, 3, 3),\n",
+    "            fontsize=7,\n",
+    "            ha='center',\n",
+    "            va='center',\n",
+    "            color='dimgray',\n",
+    "            bbox=dict(\n",
+    "                boxstyle='round,pad=0.1',\n",
+    "                facecolor='white',\n",
+    "                edgecolor='none',\n",
+    "                alpha=0.7\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "# Legenda migliorata\n",
+    "plt.scatter([], [], c='red', s=200, label='Start Transaction')\n",
+    "plt.scatter([], [], c='lightblue', s=200, label='Transactions')\n",
+    "plt.plot([], [], 'b-', linewidth=1.5, label='Change Address')\n",
+    "plt.plot([], [], 'k--', color='gray', linewidth=1, label='Other Outputs')\n",
+    "plt.legend(loc='best', fontsize=10, framealpha=0.7)\n",
+    "\n",
+    "plt.title(f\"Transaction Chain Visualization\\n{deepbit_graph.number_of_nodes()} transactions | {len(OthersDeepbit)} non-Deepbit outputs\", fontsize=14)\n",
+    "plt.axis('off')\n",
+    "\n",
+    "# Regola i margini per evitare clipping\n",
+    "plt.margins(0.15)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -878,6 +1059,14 @@
     "\n",
     "print(f\"Total deanonymized addresses: {len(deanonymized_addresses)}\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a315d7c7",
+   "metadata": {},
+   "source": [
+    "## 4) Conclusion regardin the pattern of transactions of Deepbit.net"
    ]
   },
   {
