Added Deepbit.net's transaction pattern analysis

--- a/Progetto_Birindelli.ipynb
+++ b/Progetto_Birindelli.ipynb
@@ -226,8 +226,8 @@
     "    else :\n",
     "        print(f\"Wallet addresses for {diceoncrack_service} have been successfully retrieved.\\n\")\n",
     "#Print the results\n",
-    "print(f\"DeepBit.net wallet addresses: {deepbit_wallet_addresses}\")\n",
-    "print(f\"DiceOnCrack.com wallet addresses: {diceoncrack_wallet_addresses}\")\n"
+    "print(f\"DeepBit.net wallet addresses:\\n {deepbit_wallet_addresses}\")\n",
+    "print(f\"DiceOnCrack.com wallet addresses:\\n {diceoncrack_wallet_addresses}\")\n"
    ]
   },
   {
@@ -626,7 +626,8 @@
    "metadata": {},
    "source": [
     "# Deepbit.net chain of transactions\n",
-    "Let's create a graph of the transactions of Deepbit.net starting from the transaction _1883820_ in the dataset and start following the chain of transactions where a Deepbit.net address is present as output address. The graph will be created using NetworkX library."
+    "\n",
+    "Let's create a graph of the transactions of Deepbit.net starting from the transaction _1883820_ in the dataset and start following the chain of transactions where a Deepbit.net address is present as output address. The graph will be created using NetworkX library.\n"
    ]
   },
   {
@@ -634,7 +635,7 @@
    "id": "3fde3f8c",
    "metadata": {},
    "source": [
-    "Preparing the data for the graphs of DeepBit.net"
+    "Preparing the data for the graphs of DeepBit.net\n"
    ]
   },
   {
@@ -926,7 +927,8 @@
    "metadata": {},
    "source": [
     "## 2) Computing the differences between the timestamps and the values sent on change addresses\n",
-    "For each pair of transactions ti, ti+1 in the chain, calculate the difference between the timestamps of the two transactions and between the values sent on change addresses, and visualize the differences obtained on a graph."
+    "\n",
+    "For each pair of transactions ti, ti+1 in the chain, calculate the difference between the timestamps of the two transactions and between the values sent on change addresses, and visualize the differences obtained on a graph.\n"
    ]
   },
   {
@@ -943,7 +945,7 @@
     "payment_info = transactions[['timestamp', 'txId']].merge(txId_chain, on='txId').reset_index()\n",
     "\n",
     "# Compute the differences between consecutive timestamps\n",
-    "diff_timestamp = pd.Series(payment_info['timestamp'].diff().shift(-1), name='timestamp_diff')\n",
+    "diff_timestamp = pd.Series(payment_info['timestamp'].diff().shift(-1)/60, name='timestamp_diff').round(2)\n",
     "\n",
     "# Compute the differences between consecutive amounts on change addresses\n",
     "amount_info = outputs.merge(payment_info, on='txId')\n",
@@ -957,7 +959,7 @@
     "axs[0].plot(diff_timestamp.index, diff_timestamp, color='tab:blue', marker='o')\n",
     "axs[0].set_title('Timestamp difference between consecutive transactions')\n",
     "axs[0].set_xlabel('Index in chain')\n",
-    "axs[0].set_ylabel('Timestamp difference (seconds)')\n",
+    "axs[0].set_ylabel('Timestamp difference (minutes)')\n",
     "axs[0].grid(True, alpha=0.3)\n",
     "\n",
     "# Second subplot: amount difference\n",
@@ -978,7 +980,8 @@
    "metadata": {},
    "source": [
     "## 3) OtherDeepbit addresses De-anonymization\n",
-    "In this part, I will analyze the addresses that do not belong to Deepbit.net, which I will call OthersDeepbit. The goal is to de-anonymize these addresses by checking if they correspond to entities that have been de-anonymized on WalletExplorer through the help of the scraping process."
+    "\n",
+    "In this part, I will analyze the addresses that do not belong to Deepbit.net, which I will call OthersDeepbit. The goal is to de-anonymize these addresses by checking if they correspond to entities that have been de-anonymized on WalletExplorer through the help of the scraping process.\n"
    ]
   },
   {
@@ -1066,7 +1069,18 @@
    "id": "a315d7c7",
    "metadata": {},
    "source": [
-    "## 4) Conclusion regardin the pattern of transactions of Deepbit.net"
+    "## 4) Conclusion regarding the pattern of transactions of Deepbit.net\n",
+    "\n",
+    "The pattern of transactions shows how the Deepbit.net mining pool distribute the rewards to the miners based on the amount of work done by each miner: the first transaction _1883820_ could present an initial mining pool's revenue after two mined blocks(as the network rewards were 50 btc in 2011 ) and fees. It is possible to notice that each next transaction represents a miner payment in which there are two output addresses: the former is the change address of Deepbit.net that holds the reward part which still needs to be distributed and the latter is the address of the miner that has mined the block. Moreover, the change address remains the same for all the transactions in the chain, probably because it makes easier to handle the reward distribution of the pool and to track the payments made to the miners (paying the cost of losing privacy).\n",
+    "In addiction, thanks to the plot of the timestamp differences, it is possible to notice that for some transactions the time between two consecutive transactions is equal to 0 indicating that the transactions were made in the same block, thus it is possible to assume that there are used automated systems to cluster more transactions in the same block so as to optimize the transaction fees.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "383dc1e7",
+   "metadata": {},
+   "source": [
+    "---\n"
    ]
   },
   {
@@ -1074,53 +1088,7 @@
    "id": "3d24b603",
    "metadata": {},
    "source": [
-    "## DiceOnCrack.com gambling service analysis\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4717a898",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# if diceoncrack_wallet_addresses is None:\n",
-    "    #in case of error in the scraping process, we can use a predefined list of wallet addresses\n",
-    "diceoncrack_wallet_addresses = pd.Series([\n",
-    "    \"12TaAbLWBNKB1NLYH92CPnC1DizQoNK6FN\",\n",
-    "    \"1CRACkbiJSxfDaLNEoaNsHjNtU4KttwHyo\",\n",
-    "    \"1CRACKafkXsQzUYmu2fUM3j9c2y4yDhvfh\",\n",
-    "    \"1CRACKLiwFrZbAQz1yb9w22onHCMLbiMTY\",\n",
-    "    \"12tAabLFLxvUzC5KuX7VKMM8bYRncbQ84E\",\n",
-    "    \"1CrAcKt3HE8LNsx4KKDvjqLvcr373wg5ke\",\n",
-    "    \"1AVFypuG2jUrYzjZa69C7hK59XkWUwvK1m\",\n",
-    "    \"1CRACK25QvpVdcEmPZVD5ixtf99cMF9stg\",\n",
-    "    \"1CracksLRtQMcTF4HXNrvPzRgvz7Qr6wNd\",\n",
-    "    \"13TAabLHjNzwg8Mj7XYn76FuVAqj32s8EM\",\n",
-    "    \"1CrAckQppdcfiiw4XzpsKrZrf9eDvUok9C\",\n",
-    "    \"19TAABLQTLxgWHTdm7yNJNstgeQFgxTP4f\",\n",
-    "    \"14TAAbLiw2QLuRJCGQ3iETYg3vcpweZkTE\",\n",
-    "    \"15TaABLmhxiRQ9DTX6ZcZ9S9RknVZmP5jX\",\n",
-    "    \"1tAabLBcZLVL7md9nAnvGMCYdbvq4UVZV\",\n",
-    "    \"1PipEaL8yRS8n93mUS16wT5SNDiMrMutv5\",\n",
-    "    \"1PipemCUjxq9LKww7CaLWUMeGVZL3bD3VM\",\n",
-    "    \"1LQXotaEjfmerkwrGB3dHnheujo7sng6vA\",\n",
-    "    \"1PipeBMryPGnN3Ms3HfnNjetCS4THmkpkS\",\n",
-    "    \"1PipeZHgQXcjAYsUQ4WRXyKZn1X3sJNrpk\",\n",
-    "    \"1PipePezjvE7vBukPyDUkhHEF54qK1nkeu\",\n",
-    "    \"1Q44t4knYY3PsQZUFAejhd7Wot79ecHe8e\",\n",
-    "    \"1F4VXTQRzVQfLaGEWcf697xj1g2cKqPire\",\n",
-    "    \"1Pipeb5iNYmURifrxPZfvwHsTiw9rEb2iu\",\n",
-    "    \"1PipeZofhJv1hxsxCadEeG1vHAK87f23LE\",\n",
-    "    \"17ZmFwCULT44K25kWDeYbHiGaJCrWtytjx\",\n",
-    "    \"13encD1Yagh8M6a9Wgb3YJxKHrHqXnYi8y\",\n",
-    "    \"1GD2EiVa1rbbXcmFceyM47YN16fzVwn9j\"\n",
-    "],name='hash')\n",
-    "\n",
-    "\n",
-    "diceoncrack_mapped_addresses = map_wallet_addresses(diceoncrack_wallet_addresses, mapping)\n",
-    "\n"
+    "# DiceOnCrack.com gambling service analysis\n"
    ]
   },
   {
